chore: better peer display and icons

--- a/src/panels/menu.css
+++ b/src/panels/menu.css
@@ -12,6 +12,7 @@
   font-size: 14px;
   padding: 7px;
   color: var(--text-color);
+  display: inline-block;
 }
 
 .Menu button:hover {
@@ -21,4 +22,11 @@
 .Menu button.selected {
   color: #a8c7fa;
   border-bottom: 1px solid #a8c7fa;
+}
+
+.Menu .Icon {
+  margin: 4px;
+  padding: 0;
+  display: block;
+  float: left;
 }
