--- a/src/panels/peers.css
+++ b/src/panels/peers.css
@@ -11,6 +11,23 @@
   padding: 5px;
 }
 
-.Multiaddr pre {
-  overflow: hidden
+.PeerMultiaddrs {
+  margin-bottom: 12px;
+  margin-left: 24px;
+}
+
+.Multiaddr {
+  display: flex;
+  gap: 6px;
+  margin-bottom: 3px;
+  margin-left: 12px;
+}
+.Multiaddr code {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.Multiaddr .Icon {
+  display: inline-block;
 }
